# tap-klaviyo-custom

./: README.md  config.json  meltano.yml  pyproject.toml  tap-klaviyo-custom.sh  tox.ini
tap_klaviyo_custom/: __init__.py  client.py  streams.py  tap.py
tap_klaviyo_custom/schemas/: list_members.json  lists.json
tap_klaviyo_custom/tests/: __init__.py  test_core.py
