[tool.poetry]
name = "tap-klaviyo-custom"
version = "0.0.1"
description = "`tap-klaviyo-custom` is a Singer tap for klaviyo-custom, built with the Meltano SDK for Singer Taps."
authors = ["Ryan Bell"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-klaviyo-custom = 'tap_klaviyo_custom.tap:Tapklaviyo-custom.cli'
